[package]
name = "shake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = "0.8.5"
once_cell = "1.18.0"

[dependencies.windows]
version = "0.48"
features = [
	"Data_Xml_Dom",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse", 
	"Win32_Foundation",
	"Win32_System_WindowsProgramming",
	"Win32_UI_Shell",
	"Win32_System_Com",

]
